--- a/mysite/templates/article/list/article_detail.html
+++ b/mysite/templates/article/list/article_detail.html
@@ -5,16 +5,17 @@
 {% block title %}{{ article.title }}{% endblock %}
 
 {% block content %}
-
+{% with total_likes=article.users_like.count users_like=article.users_like.all %}
 
 <div class="container">
     <div class="col-md-9">
         <header>
             <h1>{{ article.title }}</h1>
             <p>
-                <a href="#">
+                <a href="{% url 'article:author_articles' article.author.username %}">
                     {{ article.author.username }}
                 </a>
+                <span style="margin-left:20px" class="glyphicon glyphicon-thumbs-up">{{ total_likes }}like{{ total_likes | pluralize }}</span>
 
             </p>
         </header>
@@ -32,7 +33,14 @@
                 <a onclick="like_article({{article.id}}, 'unlike')" href="#"><span style="margin-left: 15px;" class="glyphicon glyphicon-thumbs-down">unlike</span></a>
             </p>
         </div>
-
+        <div>
+            <p class="text-center"><strong>点赞本文的读者</strong></p>
+            {% for user in article.users_like.all %}
+            <p class="text-center">{{ user.username }}</p>
+            {% empty %}
+            <p class="text-center">还没有人对此文章表态</p>
+            {% endfor %}
+        </div>
     </div>
 
 
@@ -59,8 +67,24 @@
         });
     });
 
+    function like_article(id, action) {
+        $.ajax({
+            url: "{% url 'article:like_article' %}",
+            type: "POST",
+            data: {"id": id, "action": action},
+            success: function (e) {
+                if (e == "1") {
+                    layer.msg("感谢点赞");
+                    window.location.reload();
+                } else {
+                    layer.msg("我会继续努力");
+                    window.location.reload();
+                }
+            },
+        });
+    }
 
 </script>
-
+{% endwith %}
 {% endblock %}
 
