--- a/mysite/templates/article/leftslider.html
+++ b/mysite/templates/article/leftslider.html
@@ -5,7 +5,13 @@
         <p><a href="{% url 'article:article_post'%}">发布文章</a></p>
         <p><a href="{% url 'article:article_list' %}">文章列表</a></p>
         <p><a href="{% url 'article:article_tag' %}">文章标签</a></p>
-    </div>
 
+    </div>
+    <hr>
+    <div class="text-center" style="margin-top: 5px;">
+        <p><h4>图片管理</h4></p>
+        <p><a href="{% url 'image:list_images' %}">图片管理</a></p>
+    </div>
+    <hr>
 </div>
 
